--- a/resume/index.qmd
+++ b/resume/index.qmd
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Curriculum vitae
-excerpt: My current CV
+title: Resume
+excerpt: My Resume
 execute:
   freeze: true  # never re-render during project render
 engine: knitr 
@@ -33,7 +33,7 @@ cv:
 ```{=html}
 <p class="text-center">
   <a class="btn btn-primary btn-lg cv-download" href="`r rmarkdown::metadata$cv$pdf`" target="_blank">
-    <i class="fa-solid fa-file-arrow-down"></i>&ensp;Download current CV
+    <i class="fa-solid fa-file-arrow-down"></i>&ensp;Download Resume PDF
   </a>
 </p>
 <div class="embed-container">
