--- a/posts.qmd
+++ b/posts.qmd
@@ -4,6 +4,7 @@ listing:
   contents: posts
   sort: "date desc"
   type: default
+  feed: true
   categories: false
   sort-ui: false
   filter-ui: false
