--- a/index.qmd
+++ b/index.qmd
@@ -25,11 +25,12 @@ about:
 
 Hi, thanks for stopping by.
 
-I am a machine learning researcher at [Arena AI](https://arena-ai.com), where we are working on generative models of customer behavior to help build autonomous, self-learning systems at large enterprise companies. Previously, I have worked on economic models of competition and network growth as a research scientist at Facebook, on advertising, pricing, and marketplace growth as a senior machine learning engineer at Instacart (L6), and on causal inference and advertiser behavior at Microsoft Research.
+I am a member of the data science staff at OpenAI working on pricing and GPU allocation. Previously, I have worked as a machine learning scientist at a startup (Arena-ai) and on advertising, pricing, and marketplace growth as a senior machine learning engineer at Instacart (L6). I have also worked as a research scientist at Facebook focused on economics and on causal inference and advertiser behavior at Microsoft Research.
+
 
 I earned a PhD in Economics at Stanford Graduate School of Business, advised by [Susan Athey](https://www.gsb.stanford.edu/faculty-research/faculty/susan-athey), [Guido Imbens](https://www.gsb.stanford.edu/faculty-research/faculty/guido-w-imbens), and [Wesley Hartmann](https://web.stanford.edu/~wesleyr/index.html). My research focused on developing new methods for causal inference and machine learning, with applications to marketing and economics. In my spare time, I teach an online class on Applied Causal Inference, focused on applications of ML and causal inference in the tech industry.
 
-I live in Brooklyn, where I enjoy cooking, swing dancing, and playing with my dog, [Peanut](https://www.instagram.com/peanut_the_pommie).
+I live in San Francisco, where I enjoy cooking, swing dancing, and playing with my dog, [Peanut](https://www.instagram.com/peanut_the_pommie).
 
 You can contact me at [rndonnelly@gmail.com](mailto:rndonnelly@gmail.com).
 
